[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/icons/cards_stack_high.png" type="Texture" id=1]
[ext_resource path="res://images/icons/book_open.png" type="Texture" id=2]
[ext_resource path="res://Prize.gd" type="Script" id=3]

[node name="Prize" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardAnchor" type="Node2D" parent="."]
position = Vector2( 129, 149 )

[node name="ButtonAnchor" type="Control" parent="."]
margin_top = 267.0
margin_right = 250.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddToLibrary" type="Button" parent="ButtonAnchor"]
margin_left = 25.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 75.0
icon = ExtResource( 2 )
clip_text = true
expand_icon = true

[node name="AddToDeck" type="Button" parent="ButtonAnchor"]
margin_left = 145.0
margin_top = 5.0
margin_right = 225.0
margin_bottom = 75.0
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonAnchor/AddToLibrary" to="." method="_on_AddToLibrary_pressed"]
[connection signal="pressed" from="ButtonAnchor/AddToDeck" to="." method="_on_AddToDeck_pressed"]
